streaming-analysis/src/main/fabric8/hono-streaming-analysis-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: https
    port: 8445
    protocol: TCP
    targetPort: 8445
  selector:
    name: ${project.artifactId}
