streaming-analysis/src/main/fabric8/hono-streaming-analysis-route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  to:
    kind: Service
    name: ${project.artifactId}
  port:
    targetPort: 8445
  tls:
    termination: passthrough
